[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "sshkey-tools"
version = "0.12.2"
description = "A Python module for generating, parsing and handling OpenSSH keys and certificates"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
authors = [
    { name = "Lars Scheibling", email = "lars@scheibling.se" }
]
requires-python = ">=3.10"
keywords = ["python", "openssh", "ssh", "keys", "sshkey", "ssh-keygen", "ssh-certificate", "certificate", "parser", "decoder"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
    "cryptography~=46.0",
    "bcrypt~=5.0",
    "PrettyTable~=3.17",
    "pytimeparse2~=1.7.1",
]

[project.optional-dependencies]
dev = [
    "paramiko",
    "coverage",
    "black",
    "pytest-cov",
    "faker",
    "cprint",
    "pylint",
]

[project.urls]
Homepage = "https://github.com/scheiblingco/sshkey-tools"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "sshkey_tools.__version__" }
